[PYT-207] Fix function margin on mobile (#36)

--- a/pytorch_sphinx_theme/static/css/theme.css
+++ b/pytorch_sphinx_theme/static/css/theme.css
@@ -10485,17 +10485,25 @@ article.pytorch-article .function table, article.pytorch-article .attribute tabl
 }
 article.pytorch-article .function table tbody tr th.field-name, article.pytorch-article .attribute table tbody tr th.field-name, article.pytorch-article .class table tbody tr th.field-name {
   font-size: 1.125rem;
-  padding-left: 7.5rem;
   white-space: nowrap;
   line-height: 1.75rem;
   color: #262626;
 }
+@media screen and (min-width: 1600px) {
+  article.pytorch-article .function table tbody tr th.field-name, article.pytorch-article .attribute table tbody tr th.field-name, article.pytorch-article .class table tbody tr th.field-name {
+    padding-left: 7.5rem;
+  }
+}
 article.pytorch-article .function table tbody tr td.field-body, article.pytorch-article .attribute table tbody tr td.field-body, article.pytorch-article .class table tbody tr td.field-body {
   font-size: 1.125rem;
   padding: 0.625rem;
-  padding-left: 1.25rem;
   line-height: 1.75rem;
   color: #262626;
+}
+@media screen and (min-width: 1600px) {
+  article.pytorch-article .function table tbody tr td.field-body, article.pytorch-article .attribute table tbody tr td.field-body, article.pytorch-article .class table tbody tr td.field-body {
+    padding-left: 1.25rem;
+  }
 }
 article.pytorch-article .function table tbody tr td.field-body p, article.pytorch-article .attribute table tbody tr td.field-body p, article.pytorch-article .class table tbody tr td.field-body p {
   padding-left: 0px;
