--- a/scss/_sphinx_base.scss
+++ b/scss/_sphinx_base.scss
@@ -327,7 +327,9 @@ article.pytorch-article {
         tr {
           th.field-name {
             font-size: rem(18px);
-            padding-left: rem(120px);
+            @include sphinx-full-size {
+              padding-left: rem(120px);
+            }
             white-space: nowrap;
             line-height: 1.75rem;
             color: $not_quite_black;
@@ -335,7 +337,9 @@ article.pytorch-article {
           td.field-body {
             font-size: rem(18px);
             padding: 0.625rem;
-            padding-left: rem(20px);
+            @include sphinx-full-size {
+              padding-left: rem(20px);
+            }
             line-height: rem(28px);
             color: $not_quite_black;
             p {
